tests/ui/feature-gates/feature-gate-negate-unsigned.stderr
error[E0277]: the trait bound `usize: Neg` is not satisfied
  --> $DIR/feature-gate-negate-unsigned.rs:10:23
   |
LL |     let _max: usize = -1;
   |                       ^^ the trait `Neg` is not implemented for `usize`
   |
   = help: the following other types implement trait `Neg`:
             isize
             i8
             i16
             i32
             i64
             i128
             f32
             f64
           and 8 others

error[E0600]: cannot apply unary operator `-` to type `u8`
  --> $DIR/feature-gate-negate-unsigned.rs:14:14
   |
LL |     let _y = -x;
   |              ^^ cannot apply unary operator `-`
   |
   = note: unsigned values cannot be negated

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0277, E0600.
For more information about an error, try `rustc --explain E0277`.
